# xfce4-dev-tools

./: .cvsignore  .gitignore  .gitlab-ci.yml  ChangeLog  Dockerfile  HACKING  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  configure.ac.in  configure.in.in  gitrevision  module.xml  xfce4-dev-tools.spec.in
apidocs/: index.html  style.css
ci/: Makefile.am  build_libs.sh  build_project.yml  build_project_meson.yaml  xfce.cfg  xfce.cfg.in
docs/: Dockerfile  Makefile.am  nginx.conf  xdt-csource.xml
helpers/: Makefile.am  README.md  xfce-build  xfce-do-release  xfce-do-release.in  xfce-get-release-notes  xfce-get-translations  xfce-open-gitlab  xfce-open-gl  xfce-update-news
m4macros/: Makefile.am  xdt-depends.m4  xdt-features.m4  xdt-i18n.m4  xdt-python.m4  xdt-version.m4  xdt-xfce.m4
meson-project-template/: README.md  meson.build  meson_options.txt  print-version  version.sh
scripts/: .cvsignore  Makefile.am  README.md  xdt-autogen.in  xdt-autogen.in.in  xdt-check-abi  xdt-commit  xdt-gen-visibility
tests/: Makefile.am  test-xdt-csource.c
tests/.deps/: test_xdt_csource-test-xdt-csource-data.Po  test_xdt_csource-test-xdt-csource.Po
xdt-csource/: Makefile.am  main.c
