# Copyright (c) 2020
#         The Xfce development team. All rights reserved.
#

bin_SCRIPTS =								\
	xfce-build								\
	xfce-do-release								\
	xfce-get-release-notes							\
	xfce-get-translations							\
	xfce-update-news

EXTRA_DIST =								\
	$(bin_SCRIPTS)

# vi:set ts=8 sw=8 noet ai:
