# Copyright (c) 2020
#         The Xfce development team. All rights reserved.
#

generated_scripts =							\
	xfce-do-release

scripts =								\
	xfce-build								\
	xfce-get-release-notes							\
	xfce-get-translations							\
	xfce-update-news

bin_SCRIPTS =								\
	$(scripts)								\
	$(generated_scripts)

EXTRA_DIST =								\
	$(scripts)

CLEANFILES =                                                            \
        $(generated_scripts)

# vi:set ts=8 sw=8 noet ai:
