# Copyright (c) 2002-2015
#         The Xfce development team. All rights reserved.
#
# Written for Xfce by Benedikt Meurer <benny@xfce.org>.
#

bin_SCRIPTS =								\
	xdt-autogen							\
	xdt-check-abi							\
	xdt-gen-visibility

CLEANFILES =								\
	xdt-autogen

EXTRA_DIST =								\
	README.md

# vi:set ts=8 sw=8 noet ai:
