# Copyright (c) 2002-2015
#         The Xfce development team. All rights reserved.
#
# Written for Xfce by Benedikt Meurer <benny@xfce.org>.
#

generated_scripts = \
	xdt-autogen

scripts = \
	xdt-check-abi \
	xdt-gen-visibility

bin_SCRIPTS = \
	$(scripts) \
	$(generated_scripts)

CLEANFILES = $(generated_scripts)

EXTRA_DIST = \
	README.md \
	$(scripts)

# vi:set ts=8 sw=8 noet ai:
